--- a/register.html
+++ b/register.html
@@ -57,40 +57,40 @@
                             <div class="row mt-4">
                                 <div class="form-group col-md-6 mb-4">
                                     <input type="text" class="input form-control form-border" id="firstName" required autocomplete="off">
-                                    <label class="mb-0 form-control-placeholder" for="firstName">First name</label>
-                                    <div class="invalid-feedback"> First Name is required autocomplete="off". </div>
+                                    <label class="mb-0 form-control-placeholder" for="firstName">First Name</label>
+                                    <div class="invalid-feedback"> First Name is required </div>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <input type="text" class="form-control form-border" id="lastName" required autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="lastName">Surname</label>
-                                    <div class="invalid-feedback"> last name is required autocomplete="off". </div>
+                                    <div class="invalid-feedback"> last name is required </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-group col-md-6 mb-4">
                                     <input type="text" class="form-control form-border" id="bvn" required autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="bvn">BVN</label>
-                                    <div class="invalid-feedback"> BVN is required autocomplete="off". </div>
+                                    <div class="invalid-feedback"> BVN is required </div>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <input type="text" class="form-control form-border" id="dob" required autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="dob">Date of Birth</label>
-                                    <div class="invalid-feedback"> Date of Birth is required autocomplete="off". </div>
+                                    <div class="invalid-feedback"> Date of Birth is required </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-group col-md-6 mb-4">
                                     <input type="text" class="form-control form-border" id="email" required autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="email">Email Address</label>
-                                    <div class="invalid-feedback"> Email Address is required autocomplete="off". </div>
+                                    <div class="invalid-feedback"> Email Address is required </div>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <input type="text" class="form-control form-border" id="mobile" required autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="mobile">Mobile Number</label>
-                                    <div class="invalid-feedback"> Mobile Number is required autocomplete="off". </div>
+                                    <div class="invalid-feedback"> Mobile Number is required </div>
                                 </div>
                             </div>
-                            <button class="btn btn-block btn-md btn-info mt-4 mb-3" type="submit"><span class="btn-text">Create Account</span></button>
+                            <button class="btn btn-block btn-md btn-info mt-4 mb-3" type="submit"><span class="btn-text text-uppercase">Create Account</span></button>
                         </form>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                         <div class="text-center col-md-6 mx-auto">
                             <p class="text-center text-light">
                             <span class="text-secondary">Already a User?</span>
-                            <span><a class="text-info" href="register.html">Login</a></span></p>
+                            <span><a class="text-info" href="index.html">Login</a></span></p>
                         </div>
                     </div>
                 </div>
