Updates to Forgot Password

--- a/forgot.html
+++ b/forgot.html
@@ -58,7 +58,7 @@
                         </p>
                         <p class="text-center text-secondary mt-0">
                             <span>Already a Member?</span>
-                            <span class="text-info"><a class="noul" href="login.html">Login Now</a></span>
+                            <span class="text-info"><a class="noul" href="index.html">Login Now</a></span>
                         </p>
                     </div>
                 </div>
