--- a/forgot.html
+++ b/forgot.html
@@ -35,7 +35,7 @@
                 <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4">
                     <h5 class="mb-3 text-center text-primary"><b>Password Recovery</b></h5>
                 </div>
-                <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
+                <div class="forgot-box offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
                     <form class="needs-validation" novalidate="">
                         <div class="row mt-4">
                             <div class="form-group col-md-12 mb-4">
