--- a/forgot.html
+++ b/forgot.html
@@ -26,16 +26,16 @@
 
     <div class="text-white align-items-center d-flex bg-image">
         <div class="container">
-            <div class="row text-left">
+            <div class="row text-left mb-5">
                 <div class="col-md-12 mx-auto mt-5">
                     <img src="assets/img/doubble-logo.png" class="w-10" alt="Doubble Logo">
                 </div>
             </div>
-            <div class="row mt-140">
+            <div class="row login-box">
                 <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4">
                     <h5 class="mb-3 text-center text-primary"><b>Password Recovery</b></h5>
                 </div>
-                <div class="forgot-box offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
+                <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
                     <form class="needs-validation" novalidate="">
                         <div class="row mt-4">
                             <div class="form-group col-md-12 mb-4">
