--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                       <img src="assets/img/doubble-logo.png" class="w-10" alt="Doubble Logo">
                     </div>
                   </div>
-                  <div class="row pt-5">
+                  <div class="row pt-5 login-box">
                     <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4">
                         <h5 class="mb-3 text-center text-primary"><b>Hello, welcome back!</b></h5>
                     </div>
-                    <div class="login-box offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
+                    <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
                       <div class="row">
                         <div class="offset-md-7 col-md-6 col-6 col-sm-6 col-lg-6">
                           <span class="text-right"><a href="forgot.html">Forgot password?</a></span>
