--- a/forgot.html
+++ b/forgot.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="row login-box">
-                <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4">
+                <div class="offset-md-4 col-12 col-sm-12 col-md-6 col-lg-4">
                     <h5 class="mb-3 text-center text-primary"><b>Password Recovery</b></h5>
                 </div>
                 <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
