Updates to all files

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="SpectaBasic Login">
     <meta name="keywords" content="Loans in 5 minutes">
     <meta name="author" content="Specta by Sterling Bank Plc">
+    <link rel="icon" href="assets/favicon.ico">
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css">
@@ -27,17 +28,17 @@
         <div class="text-white align-items-center d-flex bg-image">
                 <div class="container">
                   <div class="row text-left">
-                    <div class="col-md-12 mx-auto mt-5">
+                    <div class="col-md-12 mx-auto mt-3">
                       <img src="assets/img/doubble-logo.png" class="w-10" alt="Doubble Logo">
                     </div>
                   </div>
-                  <div class="row pt-5 login-box">
+                  <div class="row pt-5 login-box mt-5">
                     <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4">
                         <h5 class="mb-3 text-center text-primary"><b>Hello, welcome back!</b></h5>
                     </div>
                     <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
                       <div class="row">
-                        <div class="offset-md-7 col-md-6 col-6 col-sm-6 col-lg-6">
+                        <div class="offset-md-7 col-md-6 col-6 col-sm-12 col-lg-6">
                           <span class="text-right"><a href="forgot.html">Forgot password?</a></span>
                         </div>
                       </div>
