--- a/register.html
+++ b/register.html
@@ -10,10 +10,11 @@
     <meta name="theme-color" content="#00CCFF">
     <link rel="manifest" href="assets/manifest.json">
 
-    <title>My Doubble Login - Doubble by Sterling</title>
+    <title>New Profile Registration - Doubble by Sterling</title>
     <meta name="description" content="SpectaBasic Login">
     <meta name="keywords" content="Loans in 5 minutes">
     <meta name="author" content="Specta by Sterling Bank Plc">
+    <link rel="icon" href="assets/favicon.ico">
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css">
