--- a/verify-email.html
+++ b/verify-email.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#00CCFF">
     <link rel="manifest" href="assets/manifest.json">
 
-    <title>Password Recovery - Doubble by Sterling</title>
+    <title>Email Verification - Doubble by Sterling</title>
     <meta name="description" content="SpectaBasic Login">
     <meta name="keywords" content="Loans in 5 minutes">
     <meta name="author" content="Specta by Sterling Bank Plc">
@@ -34,7 +34,7 @@
             </div>
             <div class="row login-box mt-5" style="padding-top:25px;">
                 <div class="offset-md-4 col-12 col-sm-12 col-md-6 col-lg-4 mt-5">
-                    <h5 class="mb-4 text-center text-primary"><b>Password Recovery</b></h5>
+                    <h5 class="mb-4 text-center text-primary"><b>Email Verification</b></h5>
                 </div>
                 <div class="mt-3 offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
                     <form class="needs-validation" novalidate="">
@@ -42,26 +42,12 @@
                             <div class="form-group col-md-12 mb-4">
                                 <input type="text" class="input form-control form-border" id="username" required
                                     autocomplete="off">
-                                <label class="mb-0 form-control-placeholder" for="username">Account Email Address</label>
-                                <div class="invalid-feedback"> Account Email is required </div>
+                                <label class="mb-0 form-control-placeholder" for="username">Verification Email Code</label>
+                                <div class="invalid-feedback"> Verification is required </div>
                             </div>
                         </div>
-                        <button class="btn btn-block btn-md btn-info" type="submit"><span class="btn-text text-uppercase">Recover</span></button>
+                        <button class="btn btn-block btn-md btn-info" type="submit"><span class="btn-text text-uppercase">Verify</span></button>
                     </form>
-                </div>
-            </div>
-            <div class="py-2">
-                <div class="row">
-                    <div class="text-center col-md-4 mx-auto mt-3">
-                        <p class="text-center text-secondary">
-                            <span>Don't have an account?</span>
-                            <span class="text-info"><a class="noul" href="register.html">Sign up for free</a></span>
-                        </p>
-                        <p class="text-center text-secondary mt-0">
-                            <span>Already a Member?</span>
-                            <span class="text-info"><a class="noul" href="index.html">Login Now</a></span>
-                        </p>
-                    </div>
                 </div>
             </div>
         </div>
